--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "lucide-react": "^0.510.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
